--- a/src/go/taskfile.yml
+++ b/src/go/taskfile.yml
@@ -7,10 +7,11 @@ env:
 tasks:
   test_prereq: 
     internal: true
+    dir: src/go/async-api-gen-doc
     preconditions:
       - go version
     cmd: |
-      cd ./src/go/async-api-gen-doc && mkdir -p .coverage
+      mkdir -p .coverage
       go install github.com/jstemmer/go-junit-report/v2@latest
       go install github.com/axw/gocov/gocov@latest
       go install github.com/AlekSi/gocov-xml@latest
@@ -24,44 +25,42 @@ tasks:
   test:
     desc: Install dependencies
     internal: false
+    dir: src/go/async-api-gen-doc
     deps:
       - test_prereq
     cmd: |
       set -exo pipefail
-      cd ./src/go/async-api-gen-doc
       go test ./... -timeout 30s -v -mod=readonly -race -coverprofile=.coverage/out > .coverage/test.out
   
 
   install:
     desc: Install dependencies
     internal: true
+    dir: src/go/async-api-gen-doc
     cmd: |
-      cd src/go/async-api-gen-doc
       go mod tidy
   
   lint:
     desc: Runs lint and vet 
+    dir: src/go/async-api-gen-doc
     cmd: |
-      cd src/go/async-api-gen-doc 
       go vet 
 
   coverage:
     desc: generate coverage
+    dir: src/go/async-api-gen-doc
     deps:
-      - test_asyncapi_doc_generator
+      - test
     cmds: 
-      - |
-        cd src/go/async-api-gen-doc
-        go-junit-report -in .coverage/test.out > .coverage/go-junit.xml
-      - |
-        cd src/go/async-api-gen-doc
-        gocov convert .coverage/out | gocov-xml > .coverage/cobertura.xml
+      - go-junit-report -in .coverage/test.out > .coverage/go-junit.xml
+      - gocov convert .coverage/out | gocov-xml > .coverage/cobertura.xml
 
   show_coverage: 
     desc: Opens the current coverage viewer for the the gendoc utility.
+    dir: src/go/async-api-gen-doc
     deps:
-      - test
-    cmd: go tool cover -html=./src/go/async-api-gen-doc/.coverage/out
+      - coverage
+    cmd: go tool cover -html=.coverage/out
 
   show_docs:
     desc: Opens a webview with godoc running
